update unit tests